fixed: visibility para desempregado none

--- a/pages/adminPage/index.css
+++ b/pages/adminPage/index.css
@@ -159,4 +159,8 @@ img{
     margin-top: 50px;
 }
 
+.hidden{
+    visibility: hidden;
+}
+
 
